--- a/index.html
+++ b/index.html
@@ -2,8 +2,52 @@
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
     <title>在线转换整合</title>
+	<Link Rel="SHORTCUT ICON" href="./ICO.ico">
     <link rel="stylesheet" type="text/css" href="./index_files/index.css">
+	<div align="left"><img src="./LOGO.png" tppabs="" alt="PatternFly logo" id="qq" class="wow fadeInDown animated"
+          style="visibility: visible; animation-name: fadeInDown;"></div>
 </head>
+
+<style>
+
+a {
+    color: #F8F8FF;
+	text-shadow: 1px 1px #000, -1px 1px #000, 1px -1px #000, -1px -1px #000;
+	text-decoration: none;
+	font-family: sans-serif;
+}
+
+a:hover {
+    color: #0288D1;
+	text-shadow: 1px 1px #000, -1px 1px #000, 1px -1px #000, -1px -1px #000;
+	}
+.splash{
+  position: relative;
+  }
+  img#qq {
+    width: 128px;
+    background-size: cover;
+    border-radius: 200px;
+    box-shadow: 0px 0px 40px rgba(63, 81, 181, 0.72);
+    border: 3px solid #00008B;
+    opacity: 1;
+    margin: 0 auto;
+	margin-bottom: 20px;
+	transition: all 1.0s;  
+}
+#qq:hover {
+    box-shadow: 0 0 10px #fff;
+    -webkit-box-shadow: 0 0 19px #fff;
+    transform:rotate(360deg);
+    -ms-transform:rotate(360deg); 	/* IE 9 */
+    -moz-transform:rotate(360deg); 	/* Firefox */
+    -webkit-transform:rotate(360deg); /* Safari 和 Chrome */
+    -o-transform:rotate(360deg); 	/* Opera */
+    filter:progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
+}
+
+</style>
+  
 <body>
     <header>
         <h2>核心价值观</h2>
@@ -22,11 +66,10 @@
     </div>
     <script type="text/javascript" src="./index_files/bundle.js.下载"></script>
 
-
 </body>
 
     <header>
-        <h2>百 家 姓</h2>
+        <h2>百&emsp;家&emsp;姓</h2>
     </header>
 	
 <div style="display:flex; justify-content:center;">
@@ -96,4 +139,14 @@
 </script>
 </body>
 </div>
+
+    <header>
+        <h2><p>外 部 链 接</p></h2>
+    </header>
+
+<div style="display: flex; justify-content: center; align-items: center; gap: 20px;">
+  <div style="margin: 0;"><font size="6"><b><a href="https://www.keyfc.net/bbs/tools/tudoucode.aspx"target="_blank">与佛论禅</a></b></font></div>
+  <div style="margin: 0;"><font size="6"><b><a href="http://hi.pcmoe.net/index.html"target="_blank">与熊论道</a></b></font></div>
+</div>
+
 </html>
