--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <link rel="stylesheet" type="text/css" href="./index_files/index.css">
 	<div align="left"><img src="./LOGO.png" tppabs="" alt="PatternFly logo" id="qq" class="wow fadeInDown animated"
           style="visibility: visible; animation-name: fadeInDown;"></div>
+<body background="./background.jpg"
+
+style=" background-repeat:no-repeat ;
+
+background-size:100% 100%;
+
+background-attachment: fixed;"
+
+>
 </head>
 
 <style>
@@ -46,6 +55,9 @@ a:hover {
     filter:progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
 }
 
+h2 {
+  color: white;
+}
 </style>
   
 <body>
