--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@ a:hover {
 
 h2 {
   color: white;
+  text-shadow: 1px 1px #000, -1px 1px #000, 1px -1px #000, -1px -1px #000;
+  text-decoration: none;
+  font-family: sans-serif;
 }
 </style>
   
