--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ a {
 }
 
 a:hover {
-    color: #0288D1;
+    color: #D3D3E7;
 	text-shadow: 1px 1px #000, -1px 1px #000, 1px -1px #000, -1px -1px #000;
 	}
 .splash{
@@ -60,6 +60,22 @@ h2 {
   text-shadow: 1px 1px #000, -1px 1px #000, 1px -1px #000, -1px -1px #000;
   text-decoration: none;
   font-family: sans-serif;
+}
+
+#encoded-area {
+  background-color: rgba(211, 211, 231, 0.7);
+}
+
+#decoded-area {
+  background-color: rgba(245, 230, 245, 0.7); 
+}
+
+#a {
+  opacity: 0.9; 
+}
+
+#c {
+  opacity: 0.9; 
 }
 </style>
   
