--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@ input[type=button]:hover{
       1.先下载<a href="https://github.com/tindy2013/subconverter/releases" target="_blank">订阅转换工具</a>，并运行<br><br>
       2.节点链接或文件路径：<br><br><textarea placeholder="支持单个节点、多个节点、直链和本地文件路径，注意路径全英文" id="filepath" cols="100" rows="10"></textarea><br><br>
       3.将格式转换为：<select id="subtype" style="font-size: 18px;">
-        <option value="clash" >clash</option>
+        <option value="clash" >Clash</option>
         <option value="mixed" >Base64通用</option>
       </select><br><br>
       <input type="button" value=" 生成链接▼ " onclick="create();"> <br> <br>
