--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@ input[type=button]:hover{
         <option value="mixed" >Base64通用</option>
       </select><br><br>
       <input type="button" value=" 生成链接▼ " onclick="create();"> <br> <br>
-	  <textarea id="kd" placeholder="请填写上面的链接" cols="100" rows="10"></textarea>
+	  <textarea id="kd" placeholder="请填写上面的空格" cols="100" rows="10"></textarea>
      </b></div>	  
     </div>
 	
