--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@ h2 {
   background-color: rgba(211, 211, 231, 0.9);
 }
 
+#subtype,
 #a,
 #c {
   opacity: 0.9; 
@@ -212,14 +213,14 @@ input[type=button]:hover{
 
     <div style="position: absolute;left: 50%; transform: translateX(-50%);">
 	<div style="color: #F8F8FF;text-shadow: 1px 1px #000, -1px 1px #000, 1px -1px #000, -1px -1px #000;"><b>
-      1.先下载<a href="https://github.com/tindy2013/subconverter/releases" target="_blank">订阅转换工具</a>，并运行exe<br><br>
+      1.先下载<a href="https://github.com/tindy2013/subconverter/releases" target="_blank">订阅转换工具</a>，并运行"subconverter.exe"<br><br>
       2.节点链接或文件路径：<br><br><textarea placeholder="支持单个节点、多个节点、直链和本地文件路径，注意路径包括文件名在内必须全英文" id="filepath" cols="100" rows="10"></textarea><br><br>
       3.将格式转换为：<select id="subtype" style="font-size: 18px;">
         <option value="clash" >Clash</option>
         <option value="mixed" >Base64通用</option>
       </select><br><br>
       <input type="button" value=" 生成链接▼ " onclick="create();"> <br> <br>
-	  <textarea id="kd" placeholder="请先填写上面的空格并点击生成按钮" cols="100" rows="10"></textarea><br> <br>
+	  <textarea id="kd" placeholder="请先填写上面的空格并点击生成按钮，多次转换记得刷新网页" cols="100" rows="10"></textarea><br> <br>
       <button id="save-button"> 保存成yaml文件 </button><button id="save-button2" style="margin-left: 10px;"> 保存成 txt 文件 </button><br> <br>
 	  </b>
 	</div>	  
@@ -231,6 +232,10 @@ input[type=button]:hover{
 
       saveButton.addEventListener("click", function() {
         const url = inputText.value;
+		if (url === ""){
+        alert("请先填写节点链接或文件路径并点击生成链接按钮！");
+        return false;
+        }
 
         // 判断是否以"http://localhost:"开头
         if (url.startsWith("http://localhost:")) {
@@ -261,6 +266,10 @@ input[type=button]:hover{
 
       saveButton2.addEventListener("click", function() {
         const url = inputText2.value;
+		if (url === ""){
+        alert("请先填写节点链接或文件路径并点击生成链接按钮！");
+        return false;
+        }
 
         // 判断是否以"http://localhost:"开头
         if (url.startsWith("http://localhost:")) {
