--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@ input[type=button]:hover{
 
     <div style="position: absolute;left: 50%; transform: translateX(-50%);">
 	<div style="color: #F8F8FF;text-shadow: 1px 1px #000, -1px 1px #000, 1px -1px #000, -1px -1px #000;"><b>
-      1.先下载<a href="https://github.com/tindy2013/subconverter/releases" target="_blank">订阅转换工具</a>，并运行"subconverter.exe"<br><br>
+      1.先下载<a href="https://github.com/tindy2013/subconverter/releases" target="_blank">订阅转换工具</a>，解压并运行"subconverter.exe"<br><br>
       2.节点链接或文件路径：<br><br><textarea placeholder="支持单个节点、多个节点、直链和本地文件路径，注意路径包括文件名在内必须全英文" id="filepath" cols="100" rows="10"></textarea><br><br>
       3.将格式转换为：<select id="subtype" style="font-size: 18px;">
         <option value="clash" >Clash</option>
