--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
         <header>
             <h2>机场订阅转换</h2>
         </header>
-        <button class="toggle-button" id="t-button" style="position: fixed;bottom: 0; left: 0;">展开</button>
+        <button class="toggle-button" id="t-button" style="position: fixed;bottom: 0; left: 0;">😎</button>
         <div class="my-div collapse">
             <div style="position: absolute;left: 50%; transform: translateX(-50%);">
                 <div style="color: #F8F8FF;text-shadow: 1px 1px #000, -1px 1px #000, 1px -1px #000, -1px -1px #000;"><b>
@@ -227,18 +227,18 @@
         toggleButton.addEventListener('click', () => {
         if (content.style.display === 'none') {
         content.style.display = 'block';
-        toggleButton.textContent = '折叠';
+        toggleButton.textContent = '🥵';
         } else {
         content.style.display = 'none';
-        toggleButton.textContent = '展开';
+        toggleButton.textContent = '😎';
         }
         });
         </script>
         
-        <script>
-        // Get the button element and add a click event listener
-        var generateButton = document.getElementById("generate-link-button");
-        generateButton.addEventListener("click", function() {
+<script>
+    // Get the button element and add a click event listener
+    var generateButton = document.getElementById("generate-link-button");
+    generateButton.addEventListener("click", function() {
         // Get the current date and time
         var now = new Date();
         var formattedDate = formatDate(now);
@@ -247,21 +247,27 @@
         // Fill the textarea with the generated link
         var textarea = document.getElementById("filepath");
         textarea.value = link;
+        // Copy the generated link to clipboard
+        navigator.clipboard.writeText(link).then(function() {
+            console.log('Link copied to clipboard.');
+        }, function(error) {
+            console.error('Failed to copy link: ', error);
         });
-        // Helper function to format the date as YYYYMMDD
-        function formatDate(date) {
+    });
+    // Helper function to format the date as YYYYMMDD
+    function formatDate(date) {
         var year = date.getFullYear();
         var month = date.getMonth() + 1;
         var day = date.getDate();
         if (month < 10) {
-        month = "0" + month;
+            month = "0" + month;
         }
         if (day < 10) {
-        day = "0" + day;
+            day = "0" + day;
         }
         return year + "" + month + "" + day;
-        }
-        </script>
+    }
+</script>
         
         <script>
         const saveButton = document.querySelector("#save-button");
